lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:13: error: not found: value Liste
  			fin(1)=Liste(i+1).y
                               ^Lander:24: error: not found: value setAngleDesiree
  			setAngleDesiree(-45)
                        ^Lander:26: error: not found: value setAngleDesiree
  			setAngleDesiree(45)
                        ^